--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 ## https://docs.npmjs.com/misc/faq#should-i-check-my-node_modules-folder-into-git
 node_modules
 
+# misc
+.DS_Store
+*.pem
+
 # Book build output
 _book
 
